Add DELETE pet API
