# app/routes/petRoutes.ts
@@ -6,5 +6,6 @@ export class Routes {
         app.get('/pets/ById/:petId', wiring.petController().getPetById);
         app.post('/pets', wiring.petController().addPet);
         app.get('/pets/ByName/:petName', wiring.petController().getPetByName);
+        app.delete('/pets/:id', wiring.petController().deletePet);
     }
 }
